@@ -1,3 +1,11 @@
+Important Setting:
+1) Must have dowloaded JavaFx
+2) Must use Java 17
+3) In Eclipse, under arguments/vm arguments add something simlar:
+      --module-path /Users/abrahamlimon/Downloads/javafx-sdk-21.0.1/lib --add-modules=javafx.controls
+4) Make sure to uncheck the following:
+   Use the -XX:+ShowCodeDetailsInExceptionMessages argument when launching
+
 # Scaryville
  In this asylum escape game, navigate as the guard through corridors, avoiding lunatics with strategic movements. Win by reaching the exit or lose if caught. The game offers a resettable, immersive experience.
 
@@ -7,3 +15,5 @@
 Math class.
 • Ensured collision prevention by restricting Guard and Lunatic movement through walls with well-crafted conditional statements.
 • Designed the game's graphical user interface using JavaFX and CSS, employing multiple classes for a polished user experience.
+
+PS: This game was created and ran on Mac device with intel chip. Some settings may differ in other applications.
